# efselab

./: .gitignore  MANIFEST.in  Makefile  README.md  build_suc.py  build_suc_dalin.py  build_suc_ne.py  build_udt.py  build_udt_en.py  build_udt_suc_sv.py  build_wsj.py  commandline.py  configuration.py  conll.py  fasthash.c  form.py  lemmatize.pyx  options.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  suc.py  suc_config.py  swe-pipeline.py  swe_pipeline.py  tagger.py  taglexicon.py  tagset.py  tokenize.py  tokenizer.py  tools.py  translation.py  udt.py  udt_en.py  udt_en_config.py  wclexicon.py  wsj.py
c/: hash.c  headers.h  main.c  pytagger.c  search.c  seq.c  tag.c  train.c
data/: convert-ud-tab.sh  en-brown320.txt  sv-ud-dev.tab  sv-ud-test.tab  sv-ud-train.tab
pefselab/: __init__.py  __main__.py  build_suc.py  build_suc_dalin.py  build_suc_ne.py  build_udt.py  build_udt_en.py  build_udt_suc_sv.py  build_wsj.py  commandline.py  configuration.py  conll.py  fasthash.c  form.py  lemmatize.pyx  options.py  swe_pipeline.py  tagger.py  taglexicon.py  tagset.py  tokenizer.py  tools.py  train_swe_pipeline.py  train_udt.py  translation.py  wclexicon.py  wrappers.py
scripts/: confusion.py  conll2tab.py  evaluate-ner.sh  evaluate-udpipe.sh  install_swedish_pipeline.sh  performance_tables.py  train-bilty.sh  train-udpipe.sh  train_suc.sh  train_udt.sh  ud1to2.py  udt2tab.py
tests/: test_commandline.py  test_conll.py  test_lemmatizer.py  test_pipeline.py  test_pipeline_parse.py  test_pipeline_process_file.py  test_pipeline_run_tagging.py  test_pipeline_runner.py  (+5 more)
(+29 files in other folders)
